added base setup with registration and login without keycloak
