# src/main/java/com/sample/sampleservice/feature/auth/domain/model/FederatedIdentityRepresentation.java
@@ -1,7 +1,0 @@
-package com.sample.sampleservice.feature.auth.domain.model;
-
-public record FederatedIdentityRepresentation(
-    String identityProvider,
-    String userId,
-    String userName
-) {}
