# src/main/java/com/sample/sampleservice/shared/authentication/infrastructure/primary/SecurityConfiguration.java
@@ -3,7 +3,6 @@ package com.sample.sampleservice.shared.authentication.infrastructure.primary;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.convert.converter.Converter;
@@ -16,10 +15,12 @@ import org.springframework.security.config.annotation.web.configurers.AbstractHt
 import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer.FrameOptionsConfig;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.mapping.GrantedAuthoritiesMapper;
-import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.oauth2.core.DelegatingOAuth2TokenValidator;
 import org.springframework.security.oauth2.core.OAuth2TokenValidator;
 import org.springframework.security.oauth2.core.oidc.user.OidcUserAuthority;
+import org.springframework.security.oauth2.jose.jws.MacAlgorithm;
 import org.springframework.security.oauth2.jwt.*;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.web.SecurityFilterChain;
@@ -31,11 +32,14 @@ import org.springframework.web.servlet.handler.HandlerMappingIntrospector;
 
 import com.sample.sampleservice.shared.authentication.domain.Role;
 
-import java.time.Duration;
+import io.jsonwebtoken.io.Decoders;
+import io.jsonwebtoken.security.Keys;
+
 import java.util.HashSet;
 import java.util.Set;
 
-import static org.springframework.security.config.Customizer.withDefaults;
+import javax.crypto.SecretKey;
+
 import static org.springframework.security.web.util.matcher.AntPathRequestMatcher.antMatcher;
 
 @Slf4j
@@ -45,16 +49,14 @@ import static org.springframework.security.web.util.matcher.AntPathRequestMatche
 @EnableMethodSecurity(securedEnabled = true)
 class SecurityConfiguration {
 
-    private static final int TIMEOUT = 2000;
-
     private final CorsFilter corsFilter;
     private final HandlerMappingIntrospector introspector;
     private final ApplicationSecurityProperties applicationSecurityProperties;
     private final CustomAuthenticationEntryPoint customAuthenticationEntryPoint; 
+    private final UserEnabledTokenValidator userEnabledTokenValidator;
 
-
-    @Value("${spring.security.oauth2.client.provider.oidc.issuer-uri}")
-    private String issuerUri;
+    @Value("${jwt.secret}")
+    private String jwtSecret;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
@@ -74,9 +76,6 @@ class SecurityConfiguration {
         .requestMatchers(antMatcher(HttpMethod.OPTIONS, "/**")).permitAll()
         .requestMatchers(antMatcher("/api/v1/auth/**")).permitAll()
         // .requestMatchers(antMatcher("/api/v1/sample/**")).permitAll()
-        .requestMatchers(antMatcher(HttpMethod.POST, "/api/v1/accounts")).permitAll()
-          .requestMatchers(antMatcher("/api/v1/callback")).permitAll()
-          .requestMatchers(antMatcher("/api/v1/chapa/callback")).permitAll()
           .requestMatchers(antMatcher("/api/v1/**")).authenticated()
         .requestMatchers(antMatcher("/app/**")).permitAll()
         .requestMatchers(antMatcher("/i18n/**")).permitAll()
@@ -89,14 +88,11 @@ class SecurityConfiguration {
         .requestMatchers(new MvcRequestMatcher(introspector, "/management/**")).hasAuthority(Role.ADMIN.key())
         .anyRequest().authenticated()
       )
-      .oauth2Login(withDefaults())
       .oauth2ResourceServer(oauth2 -> oauth2
         .jwt(jwt -> jwt.jwtAuthenticationConverter(authenticationConverter()))
         .authenticationEntryPoint(customAuthenticationEntryPoint)
       )
-      .oauth2Client(withDefaults())
       .build();
-    // @formatter:on
     }
 
     private Converter<Jwt, AbstractAuthenticationToken> authenticationConverter() {
@@ -106,38 +102,24 @@ class SecurityConfiguration {
         return jwtAuthenticationConverter;
     }
 
-    /**
-     * Map authorities from "groups" or "roles" claim in ID Token.
-     *
-     * @return a {@link GrantedAuthoritiesMapper} that maps groups from the IdP to Spring Security Authorities.
-     */
     @Bean
-    public GrantedAuthoritiesMapper userAuthoritiesMapper() {
-        return authorities -> {
-            Set<GrantedAuthority> mappedAuthorities = new HashSet<>();
+    public JwtDecoder jwtDecoder() {
+        SecretKey key = Keys.hmacShaKeyFor(Decoders.BASE64.decode(jwtSecret));
+        NimbusJwtDecoder jwtDecoder = NimbusJwtDecoder.withSecretKey(key).macAlgorithm(MacAlgorithm.HS256).build();
 
-            authorities.forEach(authority -> {
-                // Check for OidcUserAuthority because Spring Security 5.2 returns
-                // each scope as a GrantedAuthority, which we don't care about.
-                if (authority instanceof OidcUserAuthority oidcUserAuthority) {
-                    mappedAuthorities.addAll(Claims.extractAuthorityFromClaims(oidcUserAuthority.getUserInfo().getClaims()));
-                }
-            });
-            return mappedAuthorities;
-        };
+        OAuth2TokenValidator<Jwt> withTimestamp = new JwtTimestampValidator();
+        //note the userEnabled token validator checks for the user for every endpoint request (either use caching or something to increase performance)
+        OAuth2TokenValidator<Jwt> combinedValidator = new DelegatingOAuth2TokenValidator<>(
+                withTimestamp, 
+                userEnabledTokenValidator
+        );
+        jwtDecoder.setJwtValidator(combinedValidator);
+
+        return jwtDecoder;
     }
 
     @Bean
-    public JwtDecoder jwtDecoder(ClientRegistrationRepository clientRegistrationRepository, RestTemplateBuilder restTemplateBuilder) {
-        NimbusJwtDecoder jwtDecoder = JwtDecoders.fromOidcIssuerLocation(issuerUri);
-
-        OAuth2TokenValidator<Jwt> audienceValidator = new AudienceValidator(applicationSecurityProperties.getOauth2().getAudience());
-        OAuth2TokenValidator<Jwt> withIssuer = JwtValidators.createDefaultWithIssuer(issuerUri);
-        OAuth2TokenValidator<Jwt> withAudience = new DelegatingOAuth2TokenValidator<>(withIssuer, audienceValidator);
-
-        jwtDecoder.setJwtValidator(withAudience);
-        jwtDecoder.setClaimSetConverter(new CustomClaimConverter(clientRegistrationRepository.findByRegistrationId("oidc"), restTemplateBuilder.setConnectTimeout(Duration.ofMillis(TIMEOUT)).setReadTimeout(Duration.ofMillis(TIMEOUT)).build()));
-
-        return jwtDecoder;
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
     }
 }
